--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -2,5 +2,9 @@
 @import "compass/reset";
 @import "composite/variables/variables.scss";
 @import "composite/predefined/predefini.scss";
+@import "composite/buttons/buttons.scss";
 @import "composite/header/header.scss";
 @import "composite/banner/banner.scss";
+@import "composite/card/card.scss";
+@import "composite/mentors/mentors.scss";
+@import "composite/footer/footer.scss";
