--- a/assets/sass/composite/banner/_banner.scss
+++ b/assets/sass/composite/banner/_banner.scss
@@ -1,59 +1,38 @@
 .banner {
-  padding: 12em 2em 8em 2em;
-  background: linear-gradient(
-      to bottom,
-      rgba($main-color, 0.7) 20%,
-      rgba(#fff, 0.4)
-    ),
-    url("../imgs/banner/piste-avion.jpg");
-  background-size: cover;
-  background-position: center;
-  text-align: center;
-  border-top: 6px solid rgb(255, 100, 200);
-  .banner-wrapper {
-    width: 70%;
-    margin-top: -2.5rem;
-    margin-left: auto;
-    font-family: "Ubuntu";
-    margin-right: auto;
-    padding-bottom: 1.5rem;
-    .b-title {
-      font-family: "Dancing Script";
-      font-size: 3em;
-      font-weight: 700;
-      text-align: center;
-      margin-bottom: 2rem;
-      color: #f8f8f8;
-      line-height: 2;
+    padding: 12em 2em 8em 2em;
+    background: linear-gradient(
+            to bottom,
+            rgba($main-color, 0.7) 20%,
+            rgba($white, 0.4)
+        ),
+        url("../imgs/banner/piste-avion.jpg");
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    border-top: 6px solid rgb(255, 100, 200);
+    .banner-wrapper {
+        width: 70%;
+        margin-top: -2.5rem;
+        margin-left: auto;
+        // font-family: "Ubuntu";
+        margin-right: auto;
+        padding-bottom: 1.5rem;
+        text-shadow: 1px 1px 5px rgba($main-color, 0.75);
+        .b-title {
+            font-family: "Dancing Script";
+            font-size: 3em;
+            font-weight: 700;
+            text-align: center;
+            margin-bottom: 2rem;
+            color: $break-white;
+            line-height: 2;
+        }
+        p {
+            color: $white;
+            font-family: Open Sans Condensed;
+            font-size: 1.3rem;
+            font-weight: 700;
+            margin-bottom: 2rem;
+        }
     }
-    p {
-      color: #fff;
-      font-family: Open Sans Condensed;
-      font-size: 1.3rem;
-      font-weight: 700;
-      margin-bottom: 2rem;
-    }
-
-    .btn {
-      font-family: Open Sans Condensed;
-      font-weight: 700;
-      text-decoration: none;
-      margin-top: 0px;
-      padding: 15px 20px;
-      letter-spacing: 2px;
-      background: rgb(248, 145, 212);
-      color: rgb(255, 255, 255);
-      border-radius: 5px;
-      border: 2px solid rgb(253, 171, 224);
-      transition: all 0.5s ease-in-out; //ou en details
-      //   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out,
-      //     border 0.3s ease-in-out;
-      outline: none;
-      user-select: none; //   empeche de selectionneer le texte a l'interieur
-      &:hover {
-        color: rgb(255, 255, 255);
-        background: transparent;
-      }
-    }
-  }
 }
