--- a/assets/sass/composite/predefined/_predefini.scss
+++ b/assets/sass/composite/predefined/_predefini.scss
@@ -1,21 +1,138 @@
-.container{
-    width: 100%; 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+.container {
+    width: 100%;
     padding-left: 15px;
-    padding-right:15px;
+    padding-right: 15px;
     margin-right: auto;
     margin-left: auto;
+    @media (min-width: $xs) {
+        max-width: 540px;
+    }
+    @media (min-width: $md) {
+        max-width: 960px;
+    }
+    @media (min-width: $sm) {
+        max-width: 540px;
+    }
+    @media (min-width: $lg) {
+        max-width: 1140px;
+    }
 }
-html{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+}
+h1,
+.h1 {
+    font-size: 2.5em;
+}
+h2,
+.h2 {
+    font-size: 2.3em;
+}
+h3,
+.h3 {
+    font-size: 2em;
+}
+h4,
+.h4 {
+    font-size: 1.6em;
+}
+h3,
+.h3 {
+    font-size: 1.4em;
+}
+h3,
+.h3 {
+    font-size: 1.2em;
+}
+.main-title {
+    margin-bottom: 2rem;
+    font-size: 3em;
+    font-family: $ubuntu;
+    font-weight: 400;
+    text-align: center;
+    line-height: 1;
+    color: $main-color;
+}
+.l4-title {
+    font-family: $piazzo;
+    color: $main-color;
+    font-size: 2rem;
+    font-weight: 600;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-top: -15px;
+}
+html {
     font-family: sans serif;
     line-height: 1.15rem;
 }
-body{
+body {
     margin: 0;
-    font-family:"ubuntu", sans-serif;
-    font-size:14px;
+    font-family: "ubuntu", sans-serif;
+    font-size: 14px;
     font-weight: 400;
-    line-height:1.5;
+    line-height: 1.5;
     background-color: #fff;
     color: #495454;
     text-align: left;
+}
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+a {
+    text-decoration: none;
+    outline: none;
+}
+ul,
+li,
+ol,
+dl {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.fas,
+.far,
+.fab,
+.fa {
+    margin: 0 0.25rem;
+    vertical-align: middle;
+}
+.img {
+    width: 100%;
+    vertical-align: middle;
+}
+.img-rounded {
+    border-radius: 50%;
+}
+// Predifined padding
+.py-70 {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+.px-15 {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.bg-bw {
+    background-color: $break-white;
+}
+
+.section-header {
+    color: $black;
 }
