--- a/assets/sass/composite/header/_navigation.scss
+++ b/assets/sass/composite/header/_navigation.scss
@@ -1,70 +1,15 @@
 nav.navigation {
-    .nav-links {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        min-width: 50%;
-        .nav-item {
-            margin-left: 1rem;
-            list-style-type: none;
-            .nav-link {
-                padding: 0.35em 0.75em;
-
-                font-size: 1rem;
-                font-weight: 400;
-                color: inherit;
-                line-height: 2;
-                cursor: pointer;
-                text-decoration: none;
-                border-bottom: 1px solid transparent;
-                transition: all 0.3s ease;
-                &:hover,
-                &:active,
-                &.active,
-                &:hover {
-                    color: rgb(253, 220, 242);
-                    border-block-color: rgb(253, 220, 242);
-                }
-            }
-        }
-        .nav-item.submenu {
-            position: relative;
-            &:hover {
-                .dropdown-menu {
-                    opacity: 1;
-                    visibility: visible;
-                    top: 100%;
-                }
-            }
-            .dropdown-menu {
-                position: absolute;
-                display: block;
-                left: 0;
-                top: 150%;
-                min-width: 200px;
-                padding: 0;
-                text-align: left;
-                background-color: $main-color;
-                color: $break-white;
-                border: none;
-                border-radius: 0;
-                opacity: 0;
-                visibility: hidden;
-                transition: all 0.3s ease-in;
-            }
-            a.nav-link {
-                display: block;
-                width: 100%;
-                transition: color 0.25s ease-in;
-
-                &:hover,
-                &a:active,
-                &.active,
-                &:hover {
-                    color: &sec-color;
-                    border-bottom-color: transparent;
-                }
-            }
-        }
+    @media (max-width: $md) {
+        display: block;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        width: 100%;
+        height: 500px;
+        background-color: transparentize($black, 0.25);
+        visibility: hidden;
+        transform: translateX(-100%);
+        transform: transform 0.5s ease, visibility 0.5s ease;
     }
+    @import "nav-links";
 }
