--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -7,4 +7,5 @@
 @import "composite/banner/banner.scss";
 @import "composite/card/card.scss";
 @import "composite/mentors/mentors.scss";
+@import "composite/service/service.scss";
 @import "composite/footer/footer.scss";
