--- a/assets/sass/composite/buttons/buttons.scss
+++ b/assets/sass/composite/buttons/buttons.scss
@@ -11,6 +11,12 @@
     outline: none;
     user-select: none;
     transition: 0.3s ease;
+    &:hover,
+    &:focus {
+        outline: none;
+        background-color: darken($main-color, 7);
+        box-shadow: 2px 4px 8px rgba($black, 0.5);
+    }
     &.btn-mini {
         font-size: 1rem;
         padding: 0.25rem 0.5rem;
@@ -18,7 +24,8 @@
     &.btn-big {
         padding: 0.75rem 0.5rem;
     }
-    &.btn-outline:hover {
+    &.btn-outline:hover,
+    &.btn-outline:focus {
         background-color: transparent;
         border-color: $main-color;
         color: $main-color;
