--- a/assets/sass/composite/card/_card.scss
+++ b/assets/sass/composite/card/_card.scss
@@ -23,5 +23,21 @@
                 color: $black;
             }
         }
+        @media (max-width: $md) {
+            flex-flow: column;
+            article {
+                margin-bottom: 1rem;
+                padding-bottom: 2rem;
+                border-right-color: transparent;
+                border-bottom-color: transparentize($sec-color, 0.85);
+
+                &:last-child {
+                    border-bottom-color: transparent;
+                }
+                h4 {
+                    max-width: 100%;
+                }
+            }
+        }
     }
 }
