finalisation complete de la page d'acceuil (responsitivité incluse)

--- a/assets/sass/composite/footer/_footer.scss
+++ b/assets/sass/composite/footer/_footer.scss
@@ -3,6 +3,10 @@
         .footer-block {
             width: 50%;
             flex: 0 0 50%;
+            @media (max-width: $md) {
+                width: 100%;
+                flex: 0 0 100%;
+            }
         }
         @import "f-links";
         @import "s-links";
