--- a/assets/sass/composite/service/_service.scss
+++ b/assets/sass/composite/service/_service.scss
@@ -3,13 +3,23 @@
         article {
             width: 50%;
             flex: 0 0 50%;
+            @media (max-width: $md) {
+                width: 100%;
+                flex: 0 0 100%;
+            }
             header h4 {
                 font-weight: 400;
                 color: $main-color;
+                margin-bottom: 1rem;
+                padding-bottom: 1rem;
+                border-bottom: 1px solid transparentize($main-color, 0.75);
             }
             p {
                 color: $black;
                 padding: 1rem 0;
+                @media (max-width: $md) {
+                    padding: 0;
+                }
             }
         }
     }
