--- a/assets/sass/composite/predefined/_padding.scss
+++ b/assets/sass/composite/predefined/_padding.scss
@@ -6,5 +6,9 @@
 .px-15 {
     padding-left: 15px;
     padding-right: 15px;
-    padding-bottom: 15px;
+    // padding-bottom: 15px;
+}
+
+.pt-120 {
+    padding-top: 120px;
 }
