--- a/assets/sass/composite/predefined/_titles.scss
+++ b/assets/sass/composite/predefined/_titles.scss
@@ -31,7 +31,7 @@ h6,
 .h6 {
     font-size: 1.2em;
 }
-.main-title .b-title {
+.main-title.b-title {
     font-size: 3em;
     font-weight: 700;
     text-align: center;
@@ -46,6 +46,7 @@ h6,
     font-family: $ubuntu;
     line-height: 1;
     color: $main-color;
+    text-align: center;
 }
 
 .b-title {
