--- a/assets/sass/composite/service/_service.scss
+++ b/assets/sass/composite/service/_service.scss
@@ -3,6 +3,7 @@
         article {
             width: 50%;
             flex: 0 0 50%;
+            padding-bottom: 15px;
             @media (max-width: $md) {
                 width: 100%;
                 flex: 0 0 100%;
