--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -8,4 +8,5 @@
 @import "composite/card/card.scss";
 @import "composite/mentors/mentors.scss";
 @import "composite/service/service.scss";
+@import "composite/news/news.scss";
 @import "composite/footer/footer.scss";
