--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -103,13 +103,13 @@ h6,
   font-size: 1.2em;
 }
 
-.main-title .b-title {
+.main-title.b-title {
   font-size: 3em;
   font-weight: 700;
   text-align: center;
 }
 @media (max-width: 992px) {
-  .main-title .b-title {
+  .main-title.b-title {
     font-size: 2em;
     line-height: 1.2;
     margin-bottom: 1rem;
@@ -121,6 +121,7 @@ h6,
   font-family: "Ubuntu", sans-serif;
   line-height: 1;
   color: #f891d4;
+  text-align: center;
 }
 
 .b-title {
@@ -227,7 +228,10 @@ dl {
 .px-15 {
   padding-left: 15px;
   padding-right: 15px;
-  padding-bottom: 15px;
+}
+
+.pt-120 {
+  padding-top: 120px;
 }
 
 .img {
@@ -449,6 +453,10 @@ header.header nav.navigation .nav-links .nav-item.submenu a.nav-link:hover, head
   border-bottom-color: transparent;
 }
 
+.header.light-header {
+  color: #f891d4;
+}
+
 .banner {
   padding: 12em 2em 8em 2em;
   background: linear-gradient(to bottom, rgba(248, 145, 212, 0.7) 20%, rgba(255, 255, 255, 0.4)), url("../imgs/banner/piste-avion.jpg") no-repeat top;
@@ -563,6 +571,7 @@ header.header nav.navigation .nav-links .nav-item.submenu a.nav-link:hover, head
 #services .service-container article {
   width: 50%;
   flex: 0 0 50%;
+  padding-bottom: 15px;
 }
 @media (max-width: 992px) {
   #services .service-container article {
@@ -585,6 +594,62 @@ header.header nav.navigation .nav-links .nav-item.submenu a.nav-link:hover, head
   #services .service-container article p {
     padding: 0;
   }
+}
+
+.news-intro {
+  font-size: 1.1em;
+  text-align: center;
+  font-weight: 300;
+}
+
+.news-category .category-wrapper {
+  justify-content: space-around;
+  align-items: center;
+}
+.news-category .category-post {
+  position: relative;
+  width: 33%;
+  flex: 0 0 30%;
+  text-align: center;
+  cursor: pointer;
+}
+.news-category .category-post:hover .category-details {
+  background-color: rgba(248, 145, 212, 0.65);
+}
+.news-category .category-post .category-details {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  width: 80%;
+  margin: 0 auto;
+  background-color: rgba(25, 25, 32, 0.65);
+  color: #e9f5ff;
+  transition: all 0.3s ease;
+}
+.news-category .category-post h5 {
+  position: relative;
+  margin-bottom: 0;
+  font-size: 1.25em;
+  line-height: 1.5;
+  text-transform: uppercase;
+  color: #e9f5ff;
+}
+.news-category .category-post .border-line {
+  margin: 10px 0;
+  width: 100%;
+  height: 1px;
+  background: #e9f5ff;
+}
+.news-category .category-post p {
+  margin-bottom: 0;
+  font-size: 1.1em;
+  line-height: 2;
+  font-weight: 400;
 }
 
 .footer .footer-blocks .footer-block {
