--- a/assets/sass/composite/news/_news.scss
+++ b/assets/sass/composite/news/_news.scss
@@ -11,9 +11,16 @@
     .category-post {
         position: relative;
         width: 33%;
-        flex: 0 0 30%;
+        flex: 0 0 33%;
         text-align: center;
         cursor: pointer;
+
+        @media (max-width: $md) {
+            width: 100px;
+            flex: 0 0 100%;
+            margin: 1rem 0;
+        }
+
         &:hover {
             .category-details {
                 background-color: transparentize($main-color, 0.35);
@@ -56,3 +63,4 @@
         }
     }
 }
+@import "_blog_articles.scss";
