--- a/assets/sass/composite/predefined/_titles.scss
+++ b/assets/sass/composite/predefined/_titles.scss
@@ -61,6 +61,16 @@ h6,
     font-size: 2rem;
     font-weight: 600;
 }
+
+.widget-title {
+    padding: 8px 0;
+    margin-bottom: 30px;
+    background-color: $main-color;
+    color: $white;
+    font-size: 18px;
+    line-height: 2;
+}
+
 .section-header {
     p {
         color: $black;
