--- a/assets/sass/composite/variables/_variables.scss
+++ b/assets/sass/composite/variables/_variables.scss
@@ -6,7 +6,7 @@ $piazzo: "Piazzolla", serif;
 
 // $main-color:#f773b5;
 $main-color: rgb(248, 145, 212);
-$font-color: #f88bd7;
+$font-color: #c9acc0;
 $blue-color: #829191;
 $sec-color: #fad9eb;
 $white: #fff;
